lab-netpol/netpol.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: deny-all-policy
  namespace: test
spec:
  podSelector:
    matchLabels:
      app: nginx
  ingress: []
